format change causing test failure??